feat: Add support for singleton and moved rvalue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,11 @@ add_subdirectory(libs/datastructure)
 add_subdirectory(libs/ecs)
 add_subdirectory(libs/rayflect)
 
-add_executable(${PROJECT_NAME} src/main.cpp)
+file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
+)
+
+add_executable(${PROJECT_NAME} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} PRIVATE ecs rayflect datastructure  SFML::Graphics)
 
 file(GLOB TEST_SOURCES CONFIGURE_DEPENDS
